# src/controllers/garden.controller.js
@@ -25,6 +25,8 @@ export const givelove = async (req, res) => {
     }
     console.log("꽃에게 사랑을 줍니다");
     const result = await usePoint(snsId);
+    if(result==-1)
+        return res.status(402).json({status: 402, isSuccess: false, error: "포인트가 부족합니다"});
     return res.status(200).json({status: 200, isSuccess: true, img: result});
 }
 
